@@ -1,3 +1,7 @@
+2013-01-06  Khaled Hosny  <khaledhosny@eglug.org>
+
+	* lib/texmfmp.c, texmfmp.h [XeTeX]: Support input pipes.
+
 2013-01-05  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* configure.ac: Check for hstrerror() needed by luaTeX.
